# tab-screen

./: .gitignore  AGENTS.md  Cargo.toml
apps/android/: IMPLEMENTATION_PLAN.md  README.md  pubspec.yaml
apps/android/android/app/: build.gradle.kts
apps/android/lib/: main.dart
apps/android/lib/src/: app.dart
apps/android/lib/src/controllers/: diagnostics_controller.dart  session_controller.dart  settings_controller.dart
apps/android/lib/src/models/: connection_mode.dart  preferences_snapshot.dart  session_models.dart
apps/android/lib/src/pages/: connect_page.dart  diagnostics_page.dart  fullscreen_page.dart  home_page.dart  settings_page.dart
apps/android/native/: IMPLEMENTATION_PLAN.md
apps/android/test/: widget_test.dart
crates/app-cli/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/app-cli/src/: main.rs
crates/capture/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/capture/src/: lib.rs
crates/config/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/config/src/: lib.rs
crates/display-backend/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/display-backend/src/: lib.rs
crates/encoder/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/encoder/src/: lib.rs
crates/protocol/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/protocol/src/: lib.rs
crates/server-core/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/server-core/src/: lib.rs
crates/transport/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/transport/src/: lib.rs
docs/: architecture.md  implementation-roadmap.md  implementation-status.md  phase1-evdi-validation.md  prd.md
(+5 files in other folders)
