[package]
name = "tab-screen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
config = { path = "../config" }
display-backend = { path = "../display-backend" }
protocol = { path = "../protocol" }
server-core = { path = "../server-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transport = { path = "../transport" }
